# tinyrpc

./: .gitmodules  CMakeLists.txt  README.md
include/: config.hpp.in  tinyrpc.hpp  tinyrpc_ns.hpp
include/tinyrpc/: client.hpp  concepts.hpp  message.hpp  server.hpp  types.hpp  utils.hpp  wrapped_buffer.hpp
include/tinyrpc/message/: parser.hpp
src/: client.cpp  message.cpp  message_parser.cpp  server.cpp  tinyrpc.cpp
tests/: CMakeLists.txt  rpc_client.cpp  rpc_server.cpp  test_rpc.proto
